tests/golden/err-reassign/expected_error.txt
error: `x` はすでに1行目で束縛されています
 --> ./_.clum:2:1
  |
2 | x = 2
  | ^ 再代入はできません（clum の束縛は不変です）
